fix channel name css overflow

--- a/frontend/src/pages/chat/Chat.module.scss
+++ b/frontend/src/pages/chat/Chat.module.scss
@@ -20,6 +20,9 @@
 
     h1 {
       text-align: center;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     ul {
